VP 10.5.0 Changelog
------------------------

- fix kicker export bug

- improve quality of internal DMD shader, now it's almost resolution independent, especially when using it via flashers (e.g. FSS tables and the like)

- add units conversion feature from VPUnits -> inches/millimeters in the status bar for control points. 
  If you select two control points of a wall/ramp the status bar shows the distance of X/Y in the selected unit.
  The unit used for the conversion can be set in the editor options dialog.

- animate bumper skirts depending on ball impact

- fix triggers getting "stuck" when the ball is moving fast

- allow reels and textboxes to be moved via the script (and textboxes can also be placed at floating point precision level)

- fix detection of used materials (bumpers, triggers & kickers were missing) and used images (color grading LUT was missing)

- fix sound device selection/mapping for music (e.g. usually the backglass device)

- script button can now both open and close the script editor

- update BASS library to 2.4.13

- see core scripts (header of core.vbs) for the respective changelog (version 3.56)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes

- DirectX 8 port for input handling (currently disabled)

VP 10.4.0 Changelog
------------------------

- add support for loading POV/backdrop settings automatically: One can define an extra POV(.pov) file for each table, named like the VPX file.
  Example: you have some custom POV settings for the table "QBerts Quest (Gottlieb 1983).vpx". Save the POV settings into the file
           "QBerts Quest (Gottlieb 1983).pov" and place it in the same directory as the VPX file. VPX will then also load the POV settings
           automatically when loading the "QBerts Quest (Gottlieb 1983).vpx" (in the editor/player).
  Or if you like to have default POV settings that are used for any other tables, save it as "autopov.pov".