@@ -12,6 +12,8 @@
 class IHaveDragPoints
 {
 public:
+   IHaveDragPoints();
+
    virtual ~IHaveDragPoints();
 
    virtual IEditable *GetIEditable() = 0;
@@ -42,6 +44,9 @@ public:
    void GetTextureCoords(const std::vector<RenderVertex> & vv, float **ppcoords);
 
    friend class DragPoint;
+
+   PropertyPane *m_propVisuals;
+   PropertyPane *m_propPosition;
 
 protected:
    template <typename T>
@@ -142,6 +147,9 @@ public:
 
    virtual int GetSelectLevel() { return 2; } // So dragpoints won't be band-selected with the main objects
 
+   void Copy();
+   void Paste();
+
    BEGIN_COM_MAP(DragPoint)
       COM_INTERFACE_ENTRY(IDispatch)
       COM_INTERFACE_ENTRY(IControlPoint)
@@ -183,6 +191,9 @@ public:
    bool m_fSmooth;
    bool m_fSlingshot;
    bool m_fAutoTexture;
+   static Vertex3Ds m_copyPoint;       /*coordinates of a control point to copy*/
+   static bool      m_pointCopied;
+
 };
 
 #endif // !defined(AFX_DRAGPOINT_H__E0C074C9_5BF2_4F8C_8012_76082BAC2203__INCLUDED_)
