@@ -101,4 +101,6 @@ public:
    VectorProtected<ISelect> *m_pvsel;
    CRITICAL_SECTION m_hPropertyLock;
    int m_maxdialogwidth;
+
+
 };
