@@ -343,6 +343,7 @@
 #define IDC_DBGLIGHTSBUTTON             280
 #define IDC_DEFAULT_COLORS_BUTTON       280
 #define IDC_TEST                        280
+#define IDC_POINT_COPY_BUTTON           280
 #define IDC_ITEMLIST                    281
 #define IDC_OUT                         281
 #define IDC_SENDMAIL                    281
@@ -926,6 +927,7 @@
 #define DBG_MATERIAL_OPACITY_EDGE_EDIT  764
 #define IDC_BUTTON2                     765
 #define IDC_DBG_MATERIALS_BUTTON        765
+#define IDC_POINT_PASTE_BUTTON          765
 #define IDC_DBG_BULB_MODULATE_VS_ADD    766
 #define IDC_DBG_TRANSMISSION_SCALE      767
 #define IDC_STATIC_GLOSSY_IMGLERP       768
