@@ -1628,7 +1628,7 @@ BEGIN
     CONTROL         "Filter Mechanical Plunger",1107,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,187,111,9
 END
 
-IDD_PROPPOINT_POSITION DIALOGEX 0, 0, 125, 42
+IDD_PROPPOINT_POSITION DIALOGEX 0, 0, 125, 46
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1636,20 +1636,24 @@ BEGIN
     EDITTEXT        2,31,23,49,12,ES_AUTOHSCROLL
     LTEXT           "&X",IDC_STATIC,7,9,8,8
     LTEXT           "&Y",IDC_STATIC,7,25,8,8
+    PUSHBUTTON      "Copy",IDC_POINT_COPY_BUTTON,95,7,27,12
+    PUSHBUTTON      "Paste",IDC_POINT_PASTE_BUTTON,95,23,27,12
 END
 
 IDD_PROPPOINT_POSITION_WITHZ DIALOGEX 0, 0, 125, 77
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    EDITTEXT        1,54,7,38,12,ES_AUTOHSCROLL
-    EDITTEXT        2,54,23,38,12,ES_AUTOHSCROLL
-    EDITTEXT        6,54,39,38,12,ES_AUTOHSCROLL
+    EDITTEXT        1,52,7,38,12,ES_AUTOHSCROLL
+    EDITTEXT        2,52,23,38,12,ES_AUTOHSCROLL
+    EDITTEXT        6,52,39,38,12,ES_AUTOHSCROLL
     LTEXT           "&X",IDC_STATIC,7,9,25,8
     LTEXT           "&Y",IDC_STATIC,7,25,25,8
-    LTEXT           "Height Offset",IDC_STATIC,7,41,46,8
-    EDITTEXT        IDC_CALC_HEIGHT_EDIT,54,55,38,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Height Offset",IDC_STATIC,7,41,43,8
+    EDITTEXT        IDC_CALC_HEIGHT_EDIT,52,55,38,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Real Height",IDC_STATIC,7,56,38,8
+    PUSHBUTTON      "Copy",IDC_POINT_COPY_BUTTON,95,7,23,12
+    PUSHBUTTON      "Paste",IDC_POINT_PASTE_BUTTON,95,23,23,12
 END
 
 IDD_PROPPOINT_VISUALS DIALOGEX 0, 0, 125, 22
